Refact: modularização do header e footer

--- a/index.html
+++ b/index.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <title>GTRR Oficial</title>
+    <title>Início - GTRR Oficial</title>
 
-    <link href="css/fonts.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <script src="./js/main.js" type="module"></script>
+    <script src="./js/getHeaderAndFooter.js" type="module"></script>
 </head>
+
 <body>
+    <header class="header"></header>
 
-<nav class="header">
-    <a class="logo" href="#"><img src="./assets/icons/menu_logo.png"></a>
-    <div class="menu">
-        <a class="botao-menu" href="#">Início</a>
-    </div>
-</nav>
+    <article class="content"></article>
 
-<div>
-
-</div>
-
-<footer>
-    <div class="footer">
-        <a class="footer-logo" href="#"><img src="./assets/icons/footer_logo.png"></a>
-    </div>
-</footer>
-
+    <footer></footer>
 </body>
+
 </html>
