Style: ajustes no tamanho do container de pergunta
Ajuste no tamanho do container de perguntas para um tamanho adaptativo a tela

--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,6 @@
         </h1>
     </nav>
     <article class="content faq">
-        <hr>
         <div class="ask-container" role="status" aria-live="polite">
             <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Como
                 posso ajudar a Guilda?</h2>
@@ -169,10 +168,10 @@
                 Continuamos sempre independentes, de forma que os projetos são organizados em nosso servidor dedicado.
                 Ainda assim,
                 esperamos que essa parceria entre a GTRR e a Soberana seja duradoura, frutífera e cada vez maior. Dessa
-                forma, contamos
-                com você para manter o nosso canal lá no servidor da Soberana saudável, focado e cooperativo, sempre
-                respeitando as
-                regras próprias do espaço.
+                forma, <u>contamos
+                    com você para manter o nosso canal lá no servidor da Soberana saudável, focado e cooperativo, sempre
+                    respeitando as
+                    regras próprias do espaço</u>.
             </p>
         </div>
     </article>
