Style: teste das animações + add icon do site

--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Perguntas Frequentes - GTRR Oficial</title>
 
+    <link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 
     <script src="./js/getHeaderAndFooter.js" type="module"></script>
@@ -136,7 +137,7 @@
                 dentro do nosso
                 núcleo mais engajado e abrimos as inscrições para as funções necessárias. Saiba mais em Curadoria.
                 <br><br>
-                <img src="./assets/imgs/rice.jpg"
+                <img src="./assets/imgs/rice.png"
                     alt="Imagem explicando o RICE, onde temos o R representando o alcance (Reach), o I representando a impacto (Impact), C representando a confiança (Confidence) e o E representando o esforço (Effort). Com a fórmula ficando R.I.C/E."
                     class="img-rice">
             </p>
