--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <title>Início - GTRR Oficial</title>
 
+    <link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
+
     <script src="./js/main.js" type="module"></script>
     <script src="./js/getHeaderAndFooter.js" type="module"></script>
 </head>
