--- a/index.html
+++ b/index.html
@@ -4,28 +4,49 @@
     <meta charset="UTF-8">
     <title>GTRR Oficial</title>
 
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
 
-<nav class="header">
-    <a class="logo" href="#"><img src="./assets/icons/menu_logo.png"></a>
-    <div class="menu">
-        <a class="botao-menu" href="#">Início</a>
+<div class="col-md-12">
+    <div class="row">
+        <nav class="header">
+            <a class="logo" href="#"><img src="./assets/icons/menu_logo.png"></a>
+            <div class="menu">
+                <a class="botao-menu" href="#">Início</a>
+            </div>
+        </nav>
+
+        <div>
+
+        </div>
+
+        <div class="footer">
+            <div class="col-md-12">
+                <div class="col-md-4">
+                    <a class="footer-logo" href="#"><img src="./assets/icons/footer_logo.png"></a>
+                    <div class="footer-social-media">
+                        <span class="footer-twitter"><img src="./assets/icons/twitter_negative.png"></span>
+                        <span class="footer-instagram"><img src="./assets/icons/instagram_negative.png"></span>
+                        <span class="footer-youtube"><img src="./assets/icons/youtube_negative.png"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                   TExtto
+                </div>
+                <div class="col-md-4">
+                    TExtto
+                </div>
+                <div class="col-md-4">
+                    TExtto
+                </div>
+            </div>
+        </div>
     </div>
-</nav>
-
-<div>
-
 </div>
-
-<footer>
-    <div class="footer">
-        <a class="footer-logo" href="#"><img src="./assets/icons/footer_logo.png"></a>
-    </div>
-</footer>
-
 </body>
 </html>
