Feat: add pág 404 para GH Pages

--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
 <body>
     <header></header>
 
-    <nav class="h1-faq">
+    <nav class="page-title">
         <h1>
             Perguntas
             <br><br>
