--- a/curadoria.html
+++ b/curadoria.html
@@ -23,9 +23,9 @@
         </h1>
     </div>
     <div class="content">
-        <h1>
-            Work in progress!
-        </h1>
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSc9De6hYKvGMLvJQeaAj1gAihiPoHgh0GDXjNAtMziwr5MTxQ/viewform?embedded=true"
+            width="700" height="700" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
     </div>
     <footer></footer>
 </body>
