Style: aplicação da sugestão do Alvy

--- a/curadoria.html
+++ b/curadoria.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Forms da Curadoria - GTRR Oficial</title>
+    <title>Sugestão de Projeto - GTRR Oficial</title>
 
     <link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
@@ -17,9 +17,9 @@
 
     <div class="page-title">
         <h1>
-            Forms da
+            Sugestao de
             <br><br>
-            Curadoria!
+            Projeto!
         </h1>
     </div>
     <div class="content">
