--- a/curadoria.html
+++ b/curadoria.html
@@ -22,7 +22,20 @@
             Projeto!
         </h1>
     </div>
-    <div class="content">
+    <div class="content curadoria">
+        <p>As sugestões passam pela curadoria de projetos da GTRR que é feita de forma coletiva, com processos baseados
+            na
+            análise de seu formato, relevância e complexidade. Tal análise considera fatores como a obra estar ou não em
+            domínio público, sua existência no mercado nacional, seu alcance, seu impacto, nossa confiança na execução
+            datarefa e a complexidade desta.
+            <br>
+            Tudo isso para avaliar a possibilidade de produção e a prioridade na alocação de recursos para a proposta.
+        </p>
+        <p>
+            Abaixo está o formulário para sugerir um projeto para a GTRR traduzir, porém o formulário pelo Google Forms
+            também pode ser acessado diretamente por este link: <a href="https://forms.gle/JVN2xWihJbiDeRYZ6"
+                target="_blank" rel="noopener noreferrer">https://forms.gle/JVN2xWihJbiDeRYZ6</a>.
+        </p>
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSc9De6hYKvGMLvJQeaAj1gAihiPoHgh0GDXjNAtMziwr5MTxQ/viewform?embedded=true"
             width="700" height="700" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
