--- a/curadoria.html
+++ b/curadoria.html
@@ -32,9 +32,9 @@
             Tudo isso para avaliar a possibilidade de produção e a prioridade na alocação de recursos para a proposta.
         </p>
         <p>
-            Abaixo está o formulário para sugerir um projeto para a GTRR traduzir, porém o formulário pelo Google Forms
-            também pode ser acessado diretamente por este link: <a href="https://forms.gle/JVN2xWihJbiDeRYZ6"
-                target="_blank" rel="noopener noreferrer">https://forms.gle/JVN2xWihJbiDeRYZ6</a>.
+            Abaixo está o formulário para sugerir um projeto para a GTRR traduzir, porém o formulário também pode ser
+            acessado diretamente por este link: <a href="https://forms.gle/JVN2xWihJbiDeRYZ6" target="_blank"
+                rel="noopener noreferrer">https://forms.gle/JVN2xWihJbiDeRYZ6</a>.
         </p>
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSc9De6hYKvGMLvJQeaAj1gAihiPoHgh0GDXjNAtMziwr5MTxQ/viewform?embedded=true"
