Chore: add textos pag membros e camaradas

--- a/camaradas.html
+++ b/camaradas.html
@@ -23,6 +23,15 @@
         </h1>
     </div>
     <div class="content">
+        <p style="align-self: flex-start;">
+            Camaradas são todas as pessoas que estão contribuindo em algum projeto da GTRR, sem estarem encarregados de
+            responsabilidades internas.
+        </p>
+        <p>
+            Abaixo está o formulário para cadastro para ser um dos camaradas da GTRR, porém o formulário também pode ser
+            acessado diretamente por este link: <a href="https://forms.gle/erSheXyudxQxLe2c7" target="_blank"
+                rel="noopener noreferrer">https://forms.gle/erSheXyudxQxLe2c7</a>.
+        </p>
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLScuxstJRTPil8TWP0Vyau1rQItjy1ziSdpcX2ZUXk7wZlvImA/viewform?embedded=true"
             width="700" height="700" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
