--- a/membros.html
+++ b/membros.html
@@ -23,6 +23,21 @@
         </h1>
     </div>
     <div class="content">
+        <p>
+            Membros são pessoas que aceitaram a responsabilidade (nada pequena) de contribuir em algum dos núcleos
+            internos da GTRR.
+            Se tratando de cargos internos, o coletivo os seleciona considerando suas habilidades, comprometimento e
+            confiança.
+            <br>
+            Membros também podem trabalhar em projetos, desde que isso não afete as responsabilidades que assumiram para
+            com a
+            organização da Guilda.
+        </p>
+        <p>
+            Abaixo está o formulário para cadastro para ser um dos membros da GTRR, porém o formulário também pode ser
+            acessado diretamente por este link: <a href="https://forms.gle/ZqGdZheELqV3oNHp9" target="_blank"
+                rel="noopener noreferrer">https://forms.gle/ZqGdZheELqV3oNHp9</a>.
+        </p>
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLScaC9IEHBgAy6cC8kBoK4CxIfvAkITQ6Cj6dBnSQk3-L_T4vA/viewform?embedded=true"
             width="700" height="700" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
