Chore: add tabindex para leitores de tela

--- a/primeiros passos.html
+++ b/primeiros passos.html
@@ -23,7 +23,7 @@
         </h1>
     </div>
     <div class="content">
-        <h2>Boas-vindas</h2>
+        <h2 tabindex="0">Boas-vindas</h2>
         <p>Seja bem-vinde à Guilda dos Tradutores e Revisores Radicais!</p>
         <p>
             A GTRR é um coletivo marxista-leninista que tem o duplo objetivo de fornecer um percurso formativo para quem
@@ -94,12 +94,12 @@
 
         <p><strong>Avante!</strong></p>
 
-        <h2>Primeiros passos</h2>
+        <h2 tabindex="0">Primeiros passos</h2>
         <p>
             Agora que você já entendeu, em linhas gerais, o que fazemos, aqui vão os primeiros passos para começar:
         </p>
-        <h3>Cadastro na Guilda</h3>
 
+        <h3 tabindex="0">Cadastro na Guilda</h3>
         <p>Não importa qual o seu nível ou familiaridade com a área de tradução ou revisão, você é bem-vinde.</p>
 
         <p>
@@ -170,7 +170,7 @@
             necessário e ensinar mediante sua vasta experiência na área.
         </p>
 
-        <h3>Dê um oi lá no canal!</h3>
+        <h3 tabindex="0">Dê um oi lá no canal!</h3>
         <p>
             Não se acanhe, se apresente lá no tópico e conheça nossa comunidade. Sempre haverá alguém para te acolher e
             ajudar:
@@ -183,7 +183,7 @@
         <p>Se tiver alguma dúvida, mande sua pergunta em nossas redes sociais ou em nosso tópico na Soberana.</p>
         <p>Além disso, continue a ler essa introdução até o final para entender certinho como nos organizamos :)</p>
 
-        <h2>Como funcionam os projetos?</h2>
+        <h2 tabindex="0">Como funcionam os projetos?</h2>
         <p>
             O foco da guilda ficará sempre em propostas que possam ser divididas sem sobrecarregar os voluntários. Os
             trabalhos não
@@ -191,7 +191,7 @@
             que se
             voluntariar.
         </p>
-        <h3>Fluxo de trabalho</h3>
+        <h3 tabindex="0">Fluxo de trabalho</h3>
         <p>O processo dos trabalhos funciona da seguinte forma:</p>
         <ul>
             <li>
@@ -239,7 +239,7 @@
 
         </ul>
 
-        <h3>Apontamentos gerais</h3>
+        <h3 tabindex="0">Apontamentos gerais</h3>
         <ul>
             <li>
                 É sempre previsto que os projetos contem com um tradutor (ou mais) e um revisor (ou mais,
@@ -272,7 +272,7 @@
             </li>
         </ul>
 
-        <h2>Curadoria</h2>
+        <h2 tabindex="0">Curadoria</h2>
         <p>
             <strong>Todos os projetos</strong> a serem sugeridos devem ser indicados exclusivamente através do
             formulário. Quaisquer sugestões no
@@ -296,7 +296,7 @@
                 formulário para sugestões de conteúdos.</a>
         </p>
 
-        <h3>Como os conteúdos são curados?</h3>
+        <h3 tabindex="0">Como os conteúdos são curados?</h3>
         <p>A curadoria dos projetos a serem trabalhados na GTRR é feita de forma coletiva, utilizando processos baseados
             na análise
             de seu formato, relevância e complexidade. Tal análise considera a obra estar ou não em domínio público, a
@@ -320,7 +320,7 @@
                 projetos em andamento</a>.
         </p>
 
-        <h2>Programas que usamos</h2>
+        <h2 tabindex="0">Programas que usamos</h2>
         <p>
             O mundo da tradução hoje é muito mais que papel, caneta e tinta. Ainda mais quando somos uma guilda composta
             de
@@ -350,7 +350,7 @@
                 rel="noopener noreferrer">aqui</a>.
         </p>
 
-        <h3>GitHub</h3>
+        <h3 tabindex="0">GitHub</h3>
         <p>
             No nosso repositório de GitHub, temos os arquivos dos projetos, assim como os tutoriais de uso dos programas
             e os
@@ -359,7 +359,7 @@
                 rel="noopener noreferrer">https://github.com/GTRRoficial/Obsidian</a>
         </p>
 
-        <h3>Reuniões e Atas</h3>
+        <h3 tabindex="0">Reuniões e Atas</h3>
         <p>
             Todas as decisões sobre os rumos da GTRR são discutidas e tomadas coletivamente em nossas reuniões mensais.
             Fique de
