Chore: atualização do texto

--- a/primeiros passos.html
+++ b/primeiros passos.html
@@ -26,9 +26,9 @@
         <h2 tabindex="0">Boas-vindas</h2>
         <p>Seja bem-vinde à Guilda dos Tradutores e Revisores Radicais!</p>
         <p>
-            A GTRR é um coletivo marxista-leninista que tem o duplo objetivo de fornecer um percurso formativo para quem
-            quer se profissionalizar na área de tradução e revisão enquanto disponibiliza materiais inéditos em prol da
-            formação teórica de comunistas.
+            A GTRR é um coletivo com o duplo objetivo de: fornecer um percurso formativo para quem quer se
+            profissionalizar na área de tradução e revisão e, ao mesmo tempo, disponibilizar materiais inéditos em prol
+            da formação teórica de comunistas.
         </p>
 
         <p>
