Chore: atualização dos textos do FAQ

--- a/faq.html
+++ b/faq.html
@@ -18,161 +18,210 @@
     <nav class="page-title">
         <h1>
             Perguntas
-            <br><br>
+
             Frequentes
         </h1>
     </nav>
     <article class="content faq">
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Como
-                posso ajudar a Guilda?</h2>
+            <h2 class="ask" tabindex="0">
+                <img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Como posso ajudar a Guilda?
+            </h2>
 
-            <p class="answer">Existem várias maneiras: transcrevendo, traduzindo, revisando, temporizando legendas,
-                administrando as redes sociais,
-                gerenciando projetos, organizando oficinas, escrevendo atas de reuniões, criando conteúdo gráfico,
-                sugerindo projetos à
-                curadoria, ajudando na manutenção do nosso GitHub e do nosso site e, claro, divulgando nosso trabalho.
-                <br><br>
-                Você pode saber mais sobre essas funções no nosso site ou perguntando aos membros da GTRR. No mais,
-                aquele velho ditado
-                se aplica: muito ajuda quem não atrapalha. Ter educação e paciência com os membros da GTRR enquanto
-                respeita nossas
-                políticas tanto em nossos projetos quanto em nosso espaço dentro da Soberana já é muito útil para nós.
+            <p class="answer">
+                <span>
+                    Existem várias maneiras: transcrevendo, traduzindo, revisando, temporizando legendas, administrando
+                    as
+                    redes sociais,
+                    gerenciando projetos, organizando oficinas, escrevendo atas de reuniões, criando conteúdo gráfico,
+                    sugerindo projetos à
+                    curadoria, ajudando na manutenção do nosso GitHub, do nosso site e, claro, divulgando nosso
+                    trabalho.
+                </span>
+                <span>
+                    Você pode saber mais sobre essas funções explorando o nosso site, redes sociais ou perguntando aos
+                    membros da GTRR. No
+                    mais, aquele velho ditado se aplica: muito ajuda quem não atrapalha. Ter educação e paciência com os
+                    membros da GTRR
+                    enquanto respeita nossas políticas tanto em nossos projetos quanto em nosso espaço dentro da
+                    Soberana já
+                    é muito útil
+                    para nós.
+                </span>
             </p>
         </div>
         <hr>
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Como
-                me inscrever nos projetos?</h2>
+            <h2 class="ask" tabindex="0">
+                <img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Como me inscrever nos projetos?
+            </h2>
 
             <p class="answer">
-                Anunciamos os projetos no <a href="https://discord.gg/soberana" tabindex="-1" target="_blank"
-                    rel="noopener noreferrer">nosso tópico</a> no servidor da Soberana e nas reuniões, e fazemos o
-                recrutamento para outras funções (ex. curadoria, comunicações). Fique atento ao chat e compareça às
-                reuniões que você terá mais
-                chances de pegar
-                um projeto. Além disso, para a inscrição em qualquer projeto ou função administrativa, é fundamental o
-                cadastro nos
-                nossos formulários de inscrição para <a
-                    href="https://docs.google.com/forms/d/e/1FAIpQLScuxstJRTPil8TWP0Vyau1rQItjy1ziSdpcX2ZUXk7wZlvImA/viewform"
-                    tabindex="-1" target="_blank" rel="noopener noreferrer">camaradas</a> (contribuintes) e <a
-                    href="https://docs.google.com/forms/d/e/1FAIpQLScaC9IEHBgAy6cC8kBoK4CxIfvAkITQ6Cj6dBnSQk3-L_T4vA/viewform"
-                    tabindex="-1" target="_blank" rel="noopener noreferrer">membros</a> (contribuintes com poder em
-                decisões
-                internas).
+                <span>
+                    Anunciamos os projetos e fazemos recrutamentos para outras funções (ex. curadoria, comunicações) em
+                    <a href="https://discord.gg/soberana" tabindex="-1" target="_blank" rel="noopener noreferrer">nosso
+                        tópico</a> no
+                    servidor da Soberana e nas reuniões. Portanto, fique atento ao chat e compareça para ter mais
+                    chances de
+                    pegar um
+                    projeto. Além disso, para a inscrição em qualquer projeto ou função administrativa, é fundamental o
+                    cadastro nos nossos
+                    formulários para <a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLScuxstJRTPil8TWP0Vyau1rQItjy1ziSdpcX2ZUXk7wZlvImA/viewform"
+                        tabindex="-1" target="_blank" rel="noopener noreferrer">camaradas</a> (contribuintes) e <a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLScaC9IEHBgAy6cC8kBoK4CxIfvAkITQ6Cj6dBnSQk3-L_T4vA/viewform"
+                        tabindex="-1" target="_blank" rel="noopener noreferrer">membros</a> (contribuintes com poder de
+                    voto
+                    em decisões internas).
+                </span>
             </p>
         </div>
         <hr>
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Posso
-                ajudar se não souber um segundo idioma?</h2>
+            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Posso ajudar se não souber um segundo idioma?
+            </h2>
 
             <p class="answer">
-                Sim! Algumas funções que não precisam de segundo idioma são a de transcritor (áudio em pt-br -> texto em
-                pt-br), a de
-                revisor de tradução para o português (mas exigimos que a pessoa seja minimamente experiente com cotejo)
-                e funções
-                administrativas como comunicação e TI.
+                <span>
+                    Sim! Algumas funções que não precisam de segundo idioma são a de transcritor (áudio em pt-br para
+                    texto
+                    em pt-br), a de
+                    revisor de tradução para o português (mas exigimos que a pessoa seja minimamente experiente com
+                    cotejo)
+                    e funções
+                    administrativas como comunicação e TI.
+                </span>
             </p>
         </div>
         <hr>
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Não
-                tenho PC. O que posso fazer pelo celular?</h2>
+            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Não tenho PC. O que posso fazer pelo celular?
+            </h2>
 
             <p class="answer">
-                Revisão, transcrição, administração de redes sociais e comunicação são tarefas que não necessitam de
-                computador para
-                serem realizadas, apesar de normalmente serem facilitadas por ele.
+                <span>
+                    Revisão, transcrição, administração de redes sociais e comunicação são tarefas que não necessitam de
+                    computador para
+                    serem realizadas. Contudo, é possível que os recursos sejam limitados.
+                </span>
             </p>
         </div>
         <hr>
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Quais
-                ferramentas a Guilda utiliza?</h2>
+            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Quais ferramentas a Guilda utiliza?
+            </h2>
 
             <p class="answer">
-                A Guilda tem a política de usar softwares de código aberto (open source) como uma afirmação política e
-                pela ampla
-                disponibilidade dos mesmos.
-                <br><br>
-                Para a transcrição, costumamos realizá-la em arquivo .txt porque ela é mais compatível com os softwares
-                de legendagem.
-                Aceitamos o uso de qualquer aplicativo ou programa não pirateado que suporte esse formato.
-                <br><br>
-                Quanto à legendagem, costumamos usar o <a href="https://aegisite.vercel.app" tabindex="-1"
-                    target="_blank" rel="noopener noreferrer">Aegisub</a> por sua simplicidade e por termos membros
-                experientes ne.
-                Inclusive,
-                realizamos oficinas de legendagem com o Aegisub, nas quais o nosso manual de legendagem é baseado.
-                Apesar disso, outros
-                programas de legendagem com código aberto podem ser utilizados – desde que isso seja acordado com seu
-                revisor e seus
-                colegas de tradução.
-                <br><br>
-                Quanto à tradução, usamos sempre o <a href="https://omegat.org/" tabindex="-1" target="_blank"
-                    rel="noopener noreferrer">OmegaT</a>, pois ele é o melhor para a função em código aberto. O uso do
-                OmegaT para
-                trabalhos de tradução é inegociável. Também oferecemos oficinas sobre esse software.
-                <br><br>
-                Por fim, salvamos nossa memória de tradução através do <a href="https://github.com" tabindex="-1"
-                    target="_blank" rel="noopener noreferrer">GitHub</a> e pedimos que os tradutores evitem usar
-                inteligência
-                artificial/machine translation, pois a Guilda prioriza o caráter formativo e a qualidade sobre uma
-                suposta rapidez.
+                <span>
+                    A Guilda tem a política de usar softwares de código aberto (<i>open source</i>) como uma afirmação
+                    política e
+                    pela ampla disponibilidade dos mesmos.
+                </span>
+
+                <span>
+                    Quanto à transcrição, costumamos realizá-la em arquivo .txt porque é o mais compatível com os
+                    softwares
+                    de legendagem.
+                    Aceitamos o uso de qualquer aplicativo ou programa não pirateado que suporte esse formato.
+                </span>
+
+                <span>
+                    Quanto à legendagem, costumamos usar o <a href="https://aegisite.vercel.app" tabindex="-1"
+                        target="_blank" rel="noopener noreferrer">Aegisub</a> por sua simplicidade e por termos membros
+                    experientes nele. Inclusive,
+                    realizamos oficinas de legendagem com o Aegisub, nas quais o <a href="./404.html" target="_blank"
+                        rel="noopener noreferrer">nosso manual de legendagem</a> é baseado. Apesar disso, outros
+                    programas de legendagem com código aberto podem ser utilizados – desde que isso seja acordado com
+                    seu
+                    revisor e com seus
+                    colegas de tradução.
+                </span>
+
+                <span>
+                    Quanto à tradução, usamos sempre o <a href="https://omegat.org/" tabindex="-1" target="_blank"
+                        rel="noopener noreferrer">OmegaT</a>, pois ele é o melhor para a função em código aberto. O uso
+                    do
+                    OmegaT para trabalhos de tradução é inegociável. Também oferecemos oficinas sobre esse software.
+                </span>
+
+                <span>
+                    Por fim, salvamos nossa memória de tradução através do <a href="https://github.com" tabindex="-1"
+                        target="_blank" rel="noopener noreferrer">GitHub</a> e pedimos que os tradutores evitem usar
+                    inteligência artificial/machine translation, pois a Guilda prioriza o caráter formativo e a
+                    qualidade
+                    sobre uma suposta rapidez.
+                </span>
             </p>
         </div>
         <hr>
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Como
-                funciona o processo de curadoria?</h2>
+            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Como funciona o processo de curadoria?
+            </h2>
 
             <p class="answer">
-                Resumidamente, os projetos podem ser sugeridos à curadoria através deste <a
-                    href="https://forms.gle/C8TJBK8vCQYJBqUQ6" tabindex="-1" target="_blank"
-                    rel="noopener noreferrer">formulário</a>.
-                A curadoria analisa e dá uma nota
-                para a sugestão baseando-se em fatores como tipo de mídia, qualidade, complexidade e extensão do
-                material. Caso o projeto tenha uma boa nota em relação aos demais, recrutamos um gerente de projeto
-                dentro do nosso
-                núcleo mais engajado e abrimos as inscrições para as funções necessárias. Saiba mais em Curadoria.
-                <br><br>
-                <img src="./assets/imgs/rice.png"
-                    alt="Imagem explicando o RICE, onde temos o R representando o alcance (Reach), o I representando a impacto (Impact), C representando a confiança (Confidence) e o E representando o esforço (Effort). Com a fórmula ficando R.I.C/E."
-                    class="img-rice">
+                <span>
+                    Resumidamente, os projetos podem ser sugeridos à curadoria através deste <a
+                        href="https://forms.gle/C8TJBK8vCQYJBqUQ6" tabindex="-1" target="_blank"
+                        rel="noopener noreferrer">formulário</a>.
+                </span>
+                <span>
+                    A curadoria analisa e dá uma nota
+                    para a sugestão baseando-se em fatores como tipo de mídia, qualidade, complexidade e extensão do
+                    material. Caso o projeto tenha uma boa nota em relação aos demais, recrutamos um gerente de projeto
+                    dentro do nosso núcleo mais engajado e abrimos as inscrições para as funções necessárias.
+                </span>
+                <span style="text-align: left; align-self: flex-start;">
+                    Saiba mais em <a href="./curadoria.html">Curadoria</a> ou em <a
+                        href="./primeiros passos.html#curadoria">Primeiros passos</a>.
+                </span>
             </p>
         </div>
         <hr>
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Sou
-                neurodivergente, acham que eu terei dificuldade em participar?</h2>
+            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Sou neurodivergente, acham que eu terei dificuldade em participar?
+            </h2>
 
             <p class="answer">
-                De forma alguma. Na verdade, os neurotípicos são minoria aqui. Nos esforçamos sempre para criar um
-                ambiente inclusivo e
-                acolhedor, com foco na qualidade sobre a produtividade. Mas isso vai do seu critério, possibilidade e
-                conforto, é claro.
+                <span>
+                    De forma alguma. Na verdade, os neurotípicos são minoria aqui. Nos esforçamos sempre para criar um
+                    ambiente inclusivo e
+                    acolhedor, com foco na qualidade sobre a produtividade. Mas isso vai do seu critério, possibilidade
+                    e conforto, é claro.
+                </span>
             </p>
         </div>
         <hr>
         <div class="ask-container" role="status" aria-live="polite">
-            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt=""> Por
-                que estamos na Soberana?</h2>
+            <h2 class="ask" tabindex="0"><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="">
+                Por que estamos na Soberana?
+            </h2>
 
             <p class="answer">
-                A nossa ligação com a Soberana se iniciou por causa de certo alinhamento quanto a conteúdos e parcerias,
-                demonstrando a
-                nossa amizade e boa convivência. Isso se consolida com a liberação do espaço no servidor deles para que
-                possamos expor
-                nosso trabalho e conseguir mais camaradas para contribuir conosco.
-                <br><br>
-                Continuamos sempre independentes, de forma que os projetos são organizados em nosso servidor dedicado.
-                Ainda assim,
-                esperamos que essa parceria entre a GTRR e a Soberana seja duradoura, frutífera e cada vez maior. Dessa
-                forma, <u>contamos
-                    com você para manter o nosso canal lá no servidor da Soberana saudável, focado e cooperativo, sempre
-                    respeitando as
-                    regras próprias do espaço</u>.
+                <span>
+                    A nossa ligação com a Soberana se iniciou por causa de certo alinhamento quanto a conteúdos e
+                    parcerias, com o tempo
+                    demonstrando a nossa amizade e boa convivência. Isso se consolida com a liberação do espaço no
+                    servidor deles para que
+                    possamos expor nosso trabalho e conseguir mais camaradas para contribuir conosco.
+                </span>
+
+                <span>
+                    Continuamos sempre independentes, de forma que os projetos são organizados em nosso servidor
+                    dedicado. Ainda assim,
+                    esperamos que essa parceria entre a GTRR e a Soberana seja duradoura, frutífera e cada vez maior..
+                </span>
+                <span>
+                    Dessa forma, contamos com você para manter o nosso canal lá no servidor da Soberana saudável, focado
+                    e cooperativo,
+                    sempre respeitando as regras próprias do espaço.
+                </span>
             </p>
         </div>
     </article>
