--- a/primeiros passos.html
+++ b/primeiros passos.html
@@ -272,7 +272,7 @@
             </li>
         </ul>
 
-        <h2 tabindex="0">Curadoria</h2>
+        <h2 tabindex="0" id="curadoria">Curadoria</h2>
         <p>
             <strong>Todos os projetos</strong> a serem sugeridos devem ser indicados exclusivamente através do
             formulário. Quaisquer sugestões no
