--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <article class="content">
     <div class="row">
         <div class="text-center">
-            <img class="principal-logo" src="../assets/icons/principal_logo.png"></img>
+            <img class="principal-logo"></img>
         </div>
         <div class="text-center">
             <h2>Boas Vindas</h2>
