--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 <header></header>
 
-<article class="content">
+<article>
     <div class="row">
         <div class="text-center">
-            <div class="principal-logo"></div>
+            <img class="principal-logo" src="../assets/icons/principal_logo.png"></img>
         </div>
         <div class="text-center">
             <h2>Boas Vindas</h2>
