--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 Somos um coletivo marxista-leninista que atua na disponibilização de materiais de esquerda radical inéditos em língua portuguesa, assim como a internacionalização dos nossos melhores materiais nacionais, enquanto fornecemos formação à nova geração de profissionais de tradução sob uma ótica radical e crítica.
             </section>
             <div>
-                <button class="button home-objetivos" onclick="window.location.href = './faq.html'">MANIFESTO</button>
-                <button class="button home-objetivos" onclick="window.location.href = './faq.html'">ESTATUTO</button>
+                <button class="button home-objetivos" onclick="window.location.href = './manifesto.html'">MANIFESTO</button>
+                <button class="button home-objetivos" onclick="window.location.href = './estatuto.html'">ESTATUTO</button>
             </div>
         </div>
     </div>
