ajustes de layout, adicção de icones de plus e minus para as perguntas da home

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <div class="text-center">
             <img class="principal-logo" src="./assets/icons/principal_logo.png"></img>
         </div>
-        <div class="text-center">
-            <h2>Boas Vindas</h2>
-            <section class="welcome-text">
+        <div class="text-center height-space">
+            <h1 class="height-space">Boas-vindas</h1>
+            <section class="welcome-text height-space">
                 Muitíssimas boas-vindas à GTRR! Somos um coletivo centralizado, diverso e independente de tradutores,
                 revisores, gerentes de projeto, legendadores, designers, gestores de redes sociais, curadores,
                 comunicadores e programadores focades em aprender enquanto disponibilizamos materiais para a formação
                 teórica de comunistas. Chega mais, não mordemos!
             </section>
-            <div>
-                <button class="btn button" href="#">Primeiros Passos</button>
+            <div class="height-space">
+                <button class="btn button" href="#">PRIMEIROS PASSOS</button>
             </div>
         </div>
-        <div>
+        <div class="height-space">
             <nav class="home-faq">
                 <h1>
                     Perguntas
@@ -41,9 +41,9 @@
                     Frequentes
                 </h1>
 
-                <div class="panel">
+                <div class="panel height-space">
                     <div class="ask-container" role="status" aria-live="polite">
-                        <h2 class="panel-head" tabindex="0">Como posso ajudar a Guilda? <span class="sign">+</span></h2>
+                        <h2 class="panel-head" tabindex="0">Como posso ajudar a Guilda? <span class="sign"><img src="./assets/icons/plus.png"></img></span></h2>
 
                         <p class="answer">
                             Existem várias maneiras: transcrevendo, traduzindo, revisando, temporizando legendas,
@@ -61,7 +61,7 @@
 
                 <div class="panel">
                     <div class="ask-container" role="status" aria-live="polite">
-                        <h2 class="panel-head" tabindex="0">Como me inscrever nos projetos? <span class="sign">+</span></h2>
+                        <h2 class="panel-head" tabindex="0">Como me inscrever nos projetos? <span class="sign"><img src="./assets/icons/plus.png"></img></span></h2>
 
                         <p class="answer">
                             Anunciamos os projetos no <a href="https://discord.gg/soberana" target="_blank">nosso
@@ -79,10 +79,10 @@
                     </div>
                 </div>
 
-                <button class="button" onclick="window.location.href = './faq.html'">Perguntas Frequentes</button>
+                <button class="button height-space" onclick="window.location.href = './faq.html'">PERGUNTAS FREQUENTES</button>
             </nav>
         </div>
-        <div class="text-center">
+        <div class="height-space text-center">
             <h1>
                 Nosso
                 <br><br>
@@ -92,10 +92,11 @@
                 Somos um coletivo marxista-leninista que atua na disponibilização de materiais de esquerda radical inéditos em língua portuguesa, assim como a internacionalização dos nossos melhores materiais nacionais, enquanto fornecemos formação à nova geração de profissionais de tradução sob uma ótica radical e crítica.
             </section>
             <div>
-                <button class="button home-objetivos" onclick="window.location.href = './manifesto.html'">MANIFESTO</button>
-                <button class="button home-objetivos" onclick="window.location.href = './estatuto.html'">ESTATUTO</button>
+                <button class="button home-objetivos height-space" onclick="window.location.href = './manifesto.html'">MANIFESTO</button>
+                <button class="button home-objetivos height-space" onclick="window.location.href = './estatuto.html'">ESTATUTO</button>
             </div>
         </div>
+        <div class="height-space"></div>
     </div>
 </article>
 <script src="./js/home.js" type="module"></script>
