--- a/index.html
+++ b/index.html
@@ -7,80 +7,107 @@
 
     <link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
     <script src="./js/main.js" type="module"></script>
     <script src="./js/getHeaderAndFooter.js" type="module"></script>
 </head>
 
 <body>
-<header></header>
+    <header></header>
 
-<article>
-    <div class="row">
+    <article class="content">
         <div class="text-center">
             <img class="principal-logo" src="./assets/icons/principal_logo.png"></img>
         </div>
         <div class="text-center height-space">
-            <h1 class="height-space">Boas-vindas</h1>
-            <section class="welcome-text height-space">
-                Muitíssimas boas-vindas à GTRR! Somos um coletivo centralizado, diverso e independente de tradutores,
+            <h1>Boas-vindas</h1>
+            <p class="welcome-text">
+                Muitíssimas boas-vindas à GTRR! Somos um coletivo centralizado, diverso e independente de
+                tradutores,
                 revisores, gerentes de projeto, legendadores, designers, gestores de redes sociais, curadores,
-                comunicadores e programadores focades em aprender enquanto disponibilizamos materiais para a formação
+                comunicadores e programadores focades em aprender enquanto disponibilizamos materiais para a
+                formação
                 teórica de comunistas. Chega mais, não mordemos!
-            </section>
-            <div class="height-space">
-                <button class="btn button" href="#">PRIMEIROS PASSOS</button>
+            </p>
+            <div>
+                <a class="button" href="./primeiros passos.html">PRIMEIROS PASSOS</a>
             </div>
         </div>
-        <div class="height-space">
-            <nav class="home-faq">
+        <div class="height-space home-faq">
+            <nav>
                 <h1>
                     Perguntas
                     <br><br>
                     Frequentes
                 </h1>
 
-                <div class="panel height-space">
+                <div class="panel">
                     <div class="ask-container" role="status" aria-live="polite">
-                        <h2 class="panel-head" tabindex="0">Como posso ajudar a Guilda? <span class="sign"><img src="./assets/icons/plus.png"></img></span></h2>
+                        <span class="panel-head">
+                            <h2 tabindex="0">
+                                Como posso ajudar a Guilda?
+                            </h2>
+                            <span class="sign">
+                                <img class="fade-in-image" src="./assets/icons/plus.png" />
+                                <img class="fade-in-image" src="./assets/icons/minus.png" style="display: none;" />
+                            </span>
+                        </span>
 
                         <p class="answer">
-                            Existem várias maneiras: transcrevendo, traduzindo, revisando, temporizando legendas,
-                            administrando as redes sociais, gerenciando projetos, organizando oficinas, escrevendo atas
-                            de reuniões, criando conteúdo gráfico, sugerindo projetos à curadoria, ajudando na
-                            manutenção do nosso GitHub e do nosso site e, claro, divulgando nosso trabalho. 
-
-                            Você pode saber mais sobre essas funções no nosso site ou perguntando aos membros da GTRR.
-                            No mais, aquele velho ditado se aplica: muito ajuda quem não atrapalha. Ter educação e
-                            paciência com os membros da GTRR enquanto respeita nossas políticas tanto em nossos projetos
-                            quanto em nosso espaço dentro da Soberana já é muito útil para nós.
+                            <span>
+                                Existem várias maneiras: transcrevendo, traduzindo, revisando, temporizando legendas,
+                                administrando as redes sociais, gerenciando projetos, organizando oficinas, escrevendo
+                                atas
+                                de reuniões, criando conteúdo gráfico, sugerindo projetos à curadoria, ajudando na
+                                manutenção do nosso GitHub e do nosso site e, claro, divulgando nosso trabalho.
+                            </span>
+                            <span>
+                                Você pode saber mais sobre essas funções no nosso site ou perguntando aos membros da
+                                GTRR.
+                                No mais, aquele velho ditado se aplica: muito ajuda quem não atrapalha. Ter educação e
+                                paciência com os membros da GTRR enquanto respeita nossas políticas tanto em nossos
+                                projetos
+                                quanto em nosso espaço dentro da Soberana já é muito útil para nós.
+                            </span>
                         </p>
                     </div>
                 </div>
 
                 <div class="panel">
                     <div class="ask-container" role="status" aria-live="polite">
-                        <h2 class="panel-head" tabindex="0">Como me inscrever nos projetos? <span class="sign"><img src="./assets/icons/plus.png"></img></span></h2>
+                        <span class="panel-head">
+                            <h2 tabindex="0">
+                                Como me inscrever nos projetos?
+                            </h2>
+                            <span class="sign">
+                                <img class="fade-in-image" src="./assets/icons/plus.png" />
+                                <img class="fade-in-image" src="./assets/icons/minus.png" style="display: none;" />
+                            </span>
+                        </span>
 
                         <p class="answer">
-                            Anunciamos os projetos no <a href="https://discord.gg/soberana" target="_blank">nosso
-                            tópico</a> no servidor da Soberana e nas reuniões, e fazemos o
-                            recrutamento para outras funções (ex. curadoria, comunicações). Fique atento ao chat e
-                            compareça às reuniões que você terá mais chances de pegar um projeto. Além disso, para a
-                            inscrição em qualquer projeto ou função administrativa, é fundamental o cadastro nos nossos
-                            formulários de inscrição para <a
-                                href="https://docs.google.com/forms/d/e/1FAIpQLScuxstJRTPil8TWP0Vyau1rQItjy1ziSdpcX2ZUXk7wZlvImA/viewform"
-                                target="_blank">camaradas</a> (contribuintes) e <a
-                                href="https://docs.google.com/forms/d/e/1FAIpQLScaC9IEHBgAy6cC8kBoK4CxIfvAkITQ6Cj6dBnSQk3-L_T4vA/viewform"
-                                target="_blank">membros</a> (contribuintes com poder
-                            em decisões internas).
+                            <span>
+                                Anunciamos os projetos no <a href="https://discord.gg/soberana" target="_blank">nosso
+                                    tópico</a> no servidor da Soberana e nas reuniões, e fazemos o
+                                recrutamento para outras funções (ex. curadoria, comunicações). Fique atento ao chat e
+                                compareça às reuniões que você terá mais chances de pegar um projeto. Além disso, para a
+                                inscrição em qualquer projeto ou função administrativa, é fundamental o cadastro nos
+                                nossos
+                                formulários de inscrição para <a
+                                    href="https://docs.google.com/forms/d/e/1FAIpQLScuxstJRTPil8TWP0Vyau1rQItjy1ziSdpcX2ZUXk7wZlvImA/viewform"
+                                    target="_blank">camaradas</a> (contribuintes) e <a
+                                    href="https://docs.google.com/forms/d/e/1FAIpQLScaC9IEHBgAy6cC8kBoK4CxIfvAkITQ6Cj6dBnSQk3-L_T4vA/viewform"
+                                    target="_blank">membros</a> (contribuintes com poder
+                                em decisões internas).
+                            </span>
                         </p>
                     </div>
                 </div>
-
-                <button class="button height-space" onclick="window.location.href = './faq.html'">PERGUNTAS FREQUENTES</button>
             </nav>
+            <div>
+                <a class="button" href='./faq.html'>PERGUNTAS
+                    FREQUENTES</a>
+            </div>
         </div>
         <div class="height-space text-center">
             <h1>
@@ -88,19 +115,23 @@
                 <br><br>
                 Objetivo
             </h1>
-            <section class="welcome-text">
-                Somos um coletivo marxista-leninista que atua na disponibilização de materiais de esquerda radical inéditos em língua portuguesa, assim como a internacionalização dos nossos melhores materiais nacionais, enquanto fornecemos formação à nova geração de profissionais de tradução sob uma ótica radical e crítica.
-            </section>
+            <p class="welcome-text">
+                Somos um coletivo marxista-leninista que atua na disponibilização de materiais de esquerda
+                radical
+                inéditos em língua portuguesa, assim como a internacionalização dos nossos melhores
+                materiais
+                nacionais, enquanto fornecemos formação à nova geração de profissionais de tradução sob uma
+                ótica
+                radical e crítica.
+            </p>
             <div>
-                <button class="button home-objetivos height-space" onclick="window.location.href = './manifesto.html'">MANIFESTO</button>
-                <button class="button home-objetivos height-space" onclick="window.location.href = './estatuto.html'">ESTATUTO</button>
+                <a class="button" href='./manifesto.html'>MANIFESTO</a>
+                <a class=" button" href='./estatuto.html'>ESTATUTO</a>
             </div>
         </div>
-        <div class="height-space"></div>
-    </div>
-</article>
-<script src="./js/home.js" type="module"></script>
-<footer></footer>
+    </article>
+    <script src="./js/home.js" type="module"></script>
+    <footer></footer>
 </body>
 
 </html>
