Style: ajustes sugeridos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header></header>
 
-    <article class="content">
+    <article class="content home">
         <div class="text-center">
             <img class="principal-logo" src="./assets/icons/principal_logo.png"></img>
         </div>
