--- a/curadoria.html
+++ b/curadoria.html
@@ -17,7 +17,7 @@
 
     <div class="page-title">
         <h1>
-            Sugestao de
+            Sugestão de
             <br><br>
             Projeto!
         </h1>
